src/objects/Idea.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Now () - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a custom formula field that calculates the number of days since an idea was submitted.</inlineHelpText>
        <label>(# of Days)     Idea Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>Respond (EMS)</fullName>
                </value>
                <value>
                    <fullName>Perform</fullName>
                </value>
                <value>
                    <fullName>Tiburon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>CASE ( CreatedBy.Profile.UserType, &quot;Standard&quot;, $Organization.Name, CreatedBy.Contact.Account.Name )</formula>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>CASE ( CreatedBy.Profile.UserType, &quot;Standard&quot;,  CreatedBy.Department,  CreatedBy.Contact.Department )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Contact__c</fullName>
        <description>Employee responsible for seeing the Idea through</description>
        <label>Email Contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IdeasInAction__c</fullName>
        <inlineHelpText>This is a place where the moderator can leave comments about this idea.</inlineHelpText>
        <label>Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Long_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Long ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Account_Company__c</fullName>
        <formula>IF( TEXT(CreatedBy.UserType) &lt;&gt; &quot;Standard&quot;, IF( NOT( ISNULL( CreatedBy.ContactId ) ) ,  CreatedBy.Contact.Account.Name , &quot;&quot;),  CreatedBy.CompanyName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Account/Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <label>Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Have we turned this idea into a project?</inlineHelpText>
        <label>Project</label>
        <referenceTo>Ideas_Projects__c</referenceTo>
        <relationshipLabel>Related Ideas</relationshipLabel>
        <relationshipName>Related_Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <formula>IMAGE( CASE(   NumComments , 1, &quot;/img/samples/stars_100.gif&quot;, 2, &quot;/img/samples/stars_200.gif&quot;, 3, &quot;/img/samples/stars_300.gif&quot;, 4, &quot;/img/samples/stars_400.gif&quot;, 5, &quot;/img/samples/stars_500.gif&quot;, &quot;/img/samples/stars_000.gif&quot;), &quot;number of comments&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of stars is based on the number of comments added.</inlineHelpText>
        <label>Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>What is the status of this idea?</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Reviewed</fullName>
                    <default>true</default>
                    <label>Not Yet Reviewed</label>
                </value>
                <value>
                    <fullName>Under Consideration</fullName>
                </value>
                <value>
                    <fullName>Coming Soon</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Reviewed, But Not Feasible At this Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Browser</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>DDF Queries</fullName>
                </value>
                <value>
                    <fullName>Detective</fullName>
                </value>
                <value>
                    <fullName>ePCR</fullName>
                </value>
                <value>
                    <fullName>FBR</fullName>
                </value>
                <value>
                    <fullName>Fire RMS</fullName>
                </value>
                <value>
                    <fullName>IQ and Analytics</fullName>
                </value>
                <value>
                    <fullName>Jail</fullName>
                </value>
                <value>
                    <fullName>Law RMS</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>RMS</fullName>
                </value>
                <value>
                    <fullName>RoundTable</fullName>
                </value>
                <value>
                    <fullName>VisionCAD</fullName>
                </value>
                <value>
                    <fullName>VisionMobile</fullName>
                </value>
                <value>
                    <fullName>TC CAD/Mobile</fullName>
                </value>
                <value>
                    <fullName>TC RMS</fullName>
                </value>
                <value>
                    <fullName>DN CAD/Mobile</fullName>
                </value>
                <value>
                    <fullName>TE RMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In the Works</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Lack of Interest</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <formula>CreatedBy.FirstName  &amp; &quot; &quot;&amp; CreatedBy.LastName</formula>
        <label>Submitted By</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Ideas</fullName>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>Owner_Account_Company__c</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Ideas</label>
    </listViews>
    <listViews>
        <fullName>All_Ideas_Last_7_Days</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>COMMUNITY.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDEA.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>All Ideas - Last 7 Days</label>
    </listViews>
    <listViews>
        <fullName>Inform_RoundTable_Ideas</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDEA.CATEGORIES</field>
            <operation>equals</operation>
            <value>Inform</value>
        </filters>
        <label>Inform RoundTable Ideas</label>
    </listViews>
    <listViews>
        <fullName>Inform_RoundTable_Ideas1</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDEA.CATEGORIES</field>
            <operation>equals</operation>
            <value>Inform</value>
        </filters>
        <filters>
            <field>Sub_Category__c</field>
            <operation>equals</operation>
            <value>IQ and Analytics</value>
        </filters>
        <label>Inform RoundTable Ideas</label>
    </listViews>
    <listViews>
        <fullName>Perform_RoundTable_Ideas</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>Sub_Status__c</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>IDEA.LAST_COMMENT_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDEA.CATEGORIES</field>
            <operation>equals</operation>
            <value>Perform</value>
        </filters>
        <label>Perform RoundTable Ideas</label>
    </listViews>
    <listViews>
        <fullName>Respond_RoundTable_Ideas</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>Sub_Status__c</columns>
        <columns>IDEA.CATEGORIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDEA.CATEGORIES</field>
            <operation>equals</operation>
            <value>Respond (EMS)</value>
        </filters>
        <filters>
            <field>IDEA.STATUS</field>
            <operation>notEqual</operation>
            <value>Archive</value>
        </filters>
        <label>Respond RoundTable Ideas (Current)</label>
    </listViews>
    <listViews>
        <fullName>Respond_RoundTable_Ideas_All</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>Sub_Status__c</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>Company_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDEA.CATEGORIES</field>
            <operation>equals</operation>
            <value>Respond (EMS)</value>
        </filters>
        <label>Respond RoundTable Ideas (All)</label>
    </listViews>
    <recordTypes>
        <fullName>InternalIdeasIdeaRecordType</fullName>
        <active>true</active>
        <description>Record Type used to associate ideas with a specific community</description>
        <label>Internal Ideas: Idea Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>